# crypto_tui_ticker

./: Cargo.toml  README.md
src/: cschart.rs  main.rs
