[package]
name = "crypto_tui_ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.27.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-stream = "0.1"
color-eyre = "0.6.1"
regex = "1.5.4"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
